@@ -1,3 +1,15 @@
+2007-08-01  Mike Kestner  <mkestner@novell.com>
+
+	* generator/CallbackGen.cs : use Parameters.NativeCallbackSignature.
+	* generator/Ctor.cs : use Parameters.ImportSignature prop.
+	* generator/ImportSignature.cs : kill
+	* generator/MethodBase.cs : kill ImportSignature prop.
+	* generator/Method.cs : use Parameters.ImportSignature prop.
+	* generator/NativeCallbackSignature.cs : kill
+	* generator/Parameters.cs : add ImportSig and NativeCallbackSig.
+	* generator/Signal.cs : use Parameters.NativeCallbackSignature prop.
+	* generator/VirtualMethod.cs : use Parameters.ImportSignature prop.
+
 2007-07-31  Mike Kestner  <mkestner@novell.com>
 
 	* generator/Ctor.cs : Validate before generating and adjust protection
